2024-01-21T16:18:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7602405074 # 44
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
* notice: last 14d: unq all: 4 20
* notice: prev accum: outdated-unq outdated-all / unq all: 726 1147 / 740 1168
* notice: next accum: outdated-unq outdated-all / unq all: 727 1148 / 740 1168
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-07] / []

2024-01-21T08:17:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7599985196 # 43
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
* notice: last 14d: unq all: 4 21
* notice: prev accum: outdated-unq outdated-all / unq all: 726 1147 / 739 1167
* notice: next accum: outdated-unq outdated-all / unq all: 726 1147 / 740 1168
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-21]

2024-01-21T01:14:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7598033671 # 42
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
* notice: last 14d: unq all: 4 20
* notice: prev accum: outdated-unq outdated-all / unq all: 726 1147 / 739 1166
* notice: next accum: outdated-unq outdated-all / unq all: 726 1147 / 739 1167
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-20]

2024-01-20T08:18:04Z: