@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-21T16:18:29Z",
+  "timestamp" : "2024-01-22T01:11:41Z",
   "count_outdated" : 1148,
   "uniques_outdated" : 727,
-  "count" : 1168,
+  "count" : 1169,
   "uniques" : 740,
   "clones" : [
     {
       "timestamp": "2024-01-08T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2024-01-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
