@@ -1,3 +1,12 @@
+2024-01-22T01:11:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7605143435 # 45
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-22
+* notice: last 14d: unq all: 4 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 727 1148 / 740 1168
+* notice: next accum: outdated-unq outdated-all / unq all: 727 1148 / 740 1169
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-01-08 2024-01-21]
+
 2024-01-21T16:18:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7602405074 # 44
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-21
